--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -6,10 +6,13 @@
             </div>
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <li><a class="dropdown-item" href="#">Login</a></li>
-          <li><a class="dropdown-item" href="#">Register</a></li>
+        {% if user.is_authenticated %}
           <li><a class="dropdown-item" href="#">Profile</a></li>
-          <li><a class="dropdown-item" href="#">Logout</a></li>
+          <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+        {% else %}
+          <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
+          <li><a class="dropdown-item" href="{% url 'register' %}">Register</a></li>
+        {% endif %}
         </ul>
     </li>
     <!--favourites-->
