--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block extra_title %} Register {% endblock %}
+{% block extra_title %} Profile {% endblock %}
 
 {% block content %}
 <section class="main-content">
     <div class="container">
         <div class="row">
             <div class="col">
-                <h2>Welcom {{ user.first_name|capfirst }} to your profile page!</h2>
+                <h2>Welcome {{ user.first_name|capfirst }} to your profile page!</h2>
             </div>
         </div>
     </div>
