--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -43,6 +43,10 @@
                     <input type="password" class="form-control" id="exampleInputPassword1" name="password">
                   </div>
                   <button type="submit" class="btn btn-next">Login</button>
+                  <div class="mb-3">
+                    <p class="d-inline">Forgot password?</p>
+                    <a class="btn d-inline" href="{% url 'forgot_password' %}">Reset your password here</a>
+                  </div>
                 </form>
             </div>
         </div>
