Fixing an error with media files not showing in deployed app

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,13 +11,13 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="{{ MEDIA_URL }}media/catamaran.jpg" class="d-block w-100 carousel-img" alt="catamaran sailing in the sea">
+                        <img src="{{ MEDIA_URL }}catamaran.jpg" class="d-block w-100 carousel-img" alt="catamaran sailing in the sea">
                     </div>
                     <div class="carousel-item">
-                        <img src="{{ MEDIA_URL }}media/gozo.jpg" class="d-block w-100 carousel-img" alt="gozo island">
+                        <img src="{{ MEDIA_URL }}gozo.jpg" class="d-block w-100 carousel-img" alt="gozo island">
                     </div>
                     <div class="carousel-item">
-                        <img src="{{ MEDIA_URL }}media/marsaxlokk.jpg" class="d-block w-100 carousel-img" alt="marsaxlokk village in Malta">
+                        <img src="{{ MEDIA_URL }}marsaxlokk.jpg" class="d-block w-100 carousel-img" alt="marsaxlokk village in Malta">
                     </div>
                 </div>
             </div>
