--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,13 +11,13 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="{{ MEDIA_URL }}catamaran.jpg" class="d-block w-100 carousel-img" alt="catamaran sailing in the sea">
+                        <img src="https://cdn.pixabay.com/photo/2017/05/20/21/03/catamaran-2329770_1280.jpg" class="d-block w-100 carousel-img" alt="catamaran sailing in the sea">
                     </div>
                     <div class="carousel-item">
-                        <img src="{{ MEDIA_URL }}gozo.jpg" class="d-block w-100 carousel-img" alt="gozo island">
+                        <img src="https://cdn.pixabay.com/photo/2016/01/14/11/50/gozo-1139812_1280.jpg" class="d-block w-100 carousel-img" alt="gozo island">
                     </div>
                     <div class="carousel-item">
-                        <img src="{{ MEDIA_URL }}marsaxlokk.jpg" class="d-block w-100 carousel-img" alt="marsaxlokk village in Malta">
+                        <img src="https://cdn.pixabay.com/photo/2021/01/24/19/41/boats-5946304_1280.jpg" class="d-block w-100 carousel-img" alt="marsaxlokk village in Malta">
                     </div>
                 </div>
             </div>
