--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -6,12 +6,12 @@
 {% block content %}
 <section class="main-content">
     <div class="container">
-        <div class="row">
-            <div class="col">
+        <div class="row justify-content-center">
+            <div class="col-md-auto mt-3">
                 <h2>Register Here</h2>
             </div>
         </div>
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-md-center mb-1 mt-1">
             <div class="col-lg-8 col-md-8 col-sm-12">
                 <form class="row g-3" action="{% url 'register' %}" method="POST">
                   {% csrf_token %}
@@ -32,27 +32,24 @@
                     {{ form.phone_number }}
                   </div>
                   <div class="form-row col-md-6">
-                    <label for="email" class="form-label">Create Password:</label>
+                    <label for="password" class="form-label">Create Password:</label>
                     {{ form.password }}
                   </div>
                   <div class="col-md-6">
-                    <label for="phone_number" class="form-label">Repeat Password:</label>
+                    <label for="password class="form-label">Repeat Password:</label>
                     {{ form.confirm_password }}
                   </div>
-                  <div class="form-row">
-                    <div class="col-12">
-                      <button type="submit" class="btn btn-next">Register</button>
-                    </div>
-                  </div>
+                  <button type="submit" class="btn btn-next">Register</button>
                   <!--print form errors-->
                   {{ form.email.errors }}
                   {{ form.non_field_errors }}
                 </form>
             </div>
         </div>
-        <div class="row">
-          <div class="col-12">
-            <p> Already registered ?</p><a class="btn btn-dropdown" href="{% url 'login' %}">Login</a>
+        <div class="row justify-content-md-center">
+          <div class="col-lg-4 col-md-8 col-sm-12 mt-5">
+            <p class="d-inline"> Already registered ?</p>
+            <a class="btn btn-dropdown d-inline" href="{% url 'login' %}">Login</a>
           </div>
         </div>
     </div>
