--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -36,7 +36,7 @@
                   {% csrf_token %}
                   <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email address:</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
+                    <input type="email" autofocus class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
                   </div>
                   <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Password</label>
