--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -80,8 +80,8 @@
                         {{ order_form.country }}
                         <div class="form-check form-check-inline float-right mr-0 mt-1">
                             {% if user.is_authenticated %}
-                            <label class="form-check-label" for="id-save-info">Save this delivery information to my
-                                profile</label>
+                            <label class="form-check-label" for="id-save-info">Save these details to my
+                                profile for a quick checkout next time</label>
                             <input class="form-check-input ml-2 mr-0" type="checkbox" id="id-save-info" name="save-info"
                                 checked>
                             {% else %}
@@ -93,13 +93,13 @@
                         </div>
                     </fieldset>
                     <fieldset class="px-3">
-                        <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
+                        <legend class="fieldset-label w-auto">Payment</legend>
                         <!--A Stripe card element will go here-->
                         <div class="mb-3" id="card_elements"></div>
                         <!--Used to display form errors-->
-                        <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                        <div class="mb-3" id="card-errors" role="alert"></div>
                         <!--Pass the client secret to the view so we can get the payment intent id-->
-                        <input type="hidden" value="" name="client_secret">
+                        <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>
                     <!--link back to the shopping bag-->
                     <div class="submit-button text-right mt-5 mb-2">
@@ -121,8 +121,8 @@
                             <span class="icon">
                                 <i class="fas fa-exclamation-circle"></i>
                             </span>
-                            <span>Your card will be charged <strong><i
-                                        class="fas fa-euro-sign"></i>{{ grand_total|floatformat:2 }}</strong></span>
+                            <span>Your card will be charged <strong>
+                                <i class="fas fa-euro-sign"></i>{{ grand_total|floatformat:2 }}</strong></span>
                         </p>
                 </form>
             </div>
@@ -131,3 +131,10 @@
 </section>
 {% endblock %}
 
+{% block postloadjs %}
+   {{ block.super }}
+   {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+   {{ client_secret|json_script:"id_client_secret" }}
+   <script type="text/javascript" src="{% static 'checkout/js/stripe.js' %}"></script>
+
+{% endblock %}
