--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -2,15 +2,19 @@
     margin: 0.3rem;
 }
 
+.form-control:focus {
+    border-color: #2576da;
+}
 /**************Stripe*/
 
+input,
 .StripeElement,
 .stripe-style-input {
   box-sizing: border-box;
   height: 40px;
   padding: 10px 12px;
-  border: 1px solid transparent;
-  border-radius: 0px;
+  border: 1px solid #000000;
+  border-radius: 5px;
   background-color: #fafafa;
   box-shadow: 0 1px 3px 0 #fafafa;
   -webkit-transition: box-shadow 150ms ease;
@@ -50,4 +54,8 @@ select option[value=""] {
 .fieldset-label {
     position: relative;
     right: .5rem;
+}
+
+#card-errors {
+    color: #ef1018;
 }
