--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -63,7 +63,7 @@
                 <h4>Please fill out the form below to complete your order</h4>
                 <form action="{% url 'checkout' %}" method="POST" id="purchase-form">
                     {% csrf_token %}
-                    <fieldset class="rounded px-3 mb-5">
+                    <fieldset class="rounded px-3 mt-5">
                         <legend class="fieldset-label px-2 w-auto">Personal Details</legend>
                         {{ order_form.first_name }}
                         {{ order_form.last_name }}
@@ -92,13 +92,14 @@
                             {% endif %}
                         </div>
                     </fieldset>
+                    <!--Stripe-->
                     <fieldset class="px-3">
                         <legend class="fieldset-label w-auto">Payment</legend>
-                        <!--A Stripe card element will go here-->
+                        <!--A Stripe card element-->
                         <div class="mb-3" id="card_elements"></div>
-                        <!--Used to display form errors-->
+                        <!--Form errors-->
                         <div class="mb-3" id="card-errors" role="alert"></div>
-                        <!--Pass the client secret to the view so we can get the payment intent id-->
+                        <!--Pass the client secret to view-->
                         <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>
                     <!--link back to the shopping bag-->
