--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -129,6 +129,14 @@
             </div>
         </div>
     </div>
+    <!--Loading Spinner on Payment-->
+    <div id="loading">
+        <div class="d-flex justify-content-center">
+            <div class="spinner-border text-light mt-5" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </div>
 </section>
 {% endblock %}
 
