Fix routing error in the deployed app

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -203,6 +203,6 @@
 {% block postloadjs %}
 {{ block.super }}
 
-<script type="text/javascript" src="{% static '/bag/js/quantity.js' %}"></script>
+<script type="text/javascript" src="{% static 'bag/js/quantity.js' %}"></script>
 
 {% endblock %}
