--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -11,6 +11,7 @@
                 <h2>Welcome {{ user.first_name|capfirst }} to your profile page!</h2>
             </div>
         </div>
+        <a class="btn btn-more" href="{% url 'edit_profile' %}">Edit Your Profile</a>
     </div>
 </section>
 
