--- a/static/css/base.css
+++ b/static/css/base.css
@@ -602,6 +602,13 @@ a.ui-button:active, .ui-button:active,
     color:#2576da;
 }
 
+/**************Update Personal Info*/
+
+.img-thumbnail {
+    width: 10rem;
+    height: 10rem;
+}
+
 /**********************Footer*/
 
 footer {
