--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -2,7 +2,18 @@
     <!--access to the account menu-->
     <li class="nav-item dropdown list-inline-item nav-item">
         <a class="nav-link dropdown-toggle text-white d-block d-lg-none" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <div class="text-center"><i class="fas fa-user fa-lg"></i>
+            <div class="text-center">
+                {% if user.is_authenticated %}
+                    {% if userprofile.profile_img %}
+                     <img src="{{ userprofile.profile_img.url }}" alt="Profile Picture"
+                    class="img-fluid img-thumbnail rounded-circle d-block">
+                     {% else %}
+                    <img src="{{ 'user_profile/default_user.png' }}" alt="Default Profile Image"
+                    class="img-fluid img-thumbnail rounded-circle d-block">
+                    {% endif %}
+                {% else %}
+                <i class="fas fa-user fa-lg d-block"></i>
+                {% endif %}
             </div>
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
