--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,17 @@
                     <li class="nav-item dropdown list-inline-item">
                         <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink"
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <div><i class="fas fa-user fa-lg"></i></div>
+                            {% if user.is_authenticated %}
+                                {% if userprofile.profile_img %}
+                                <img src="{{ userprofile.profile_img.url }}" alt="Profile Picture"
+                                class="img-fluid img-thumbnail rounded-circle d-block">
+                                {% else %}
+                                 <img src="{{ 'user_profile/default_user.png' }}" alt="Default Profile Image"
+                                class="img-fluid img-thumbnail rounded-circle d-block">
+                                {% endif %}
+                            {% else %}
+                            <i class="fas fa-user fa-lg d-block"></i>
+                            {% endif %}
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             {% if user.is_authenticated %}
