--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -11,7 +11,61 @@
                 <h2>Welcome {{ user.first_name|capfirst }} to your profile page!</h2>
             </div>
         </div>
+        <div class="row justify-content-start">
+          <!--Add a defaul picture here-->
+          <div class="col-lg-4">
+            {% if userprofile.profile_img %}
+          <img src="{{ userprofile.profile_img.url }}" alt="Profile Picture" class="img-fluid img-thumbnail rounded-circle">
+            {% else %}
+            <img src="{{ 'user_profile/default_user.png' }}" alt="Default Profile Image" class="img-fluid img-thumbnail rounded-circle">
+            {% endif %}
+            {% if user.is_admin %}
+            <img src="{{ 'user_profile.url' }}" alt="Default Profile Image" class="img-fluid img-thumbnail rounded-circle">
+            {% endif %}
+          </div>
+        </div>
         <a class="btn btn-more" href="{% url 'edit_profile' %}">Edit Your Profile</a>
+    </div>
+    <div class="row">
+        <div class="col-12 col-lg-6">
+            <p class="text-muted">Order History</p>
+            <div class="order-history table-responsive">
+                <table class="table table-sm table-borderless">
+                    <thead>
+                        <tr>
+                            <th>Order Number</th>
+                            <th>Date</th>
+                            <th>Items</th>
+                            <th>Order Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for order in orders %}
+                        <tr>
+                            <td>
+                                <a href="{% url 'order_history' order.order_number %}"
+                                   title="{{ order.order_number }}">
+                                    {{ order.order_number|truncatechars:6 }}
+                                </a>
+                            </td>
+                            <td>{{ order.date }}</td>
+                            <td>
+                                <ul class="list-unstyled">
+                                    {% for item in order.ticketitems.all %}
+                                        <li class="small">
+                                            
+                                            {{ item.trip.name }} x {{ item.quantity }}
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </td>
+                            <td>${{ order.grand_total }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+          
     </div>
 </section>
 
