Fixed a type error

--- a/trips/templates/trips/add_trip.html
+++ b/trips/templates/trips/add_trip.html
@@ -82,7 +82,7 @@
                   </div>
                   <div class="form-row col-md-6">
                     <label for="special_offers" class="form-label">Family Friendly:</label>
-                    <input type="checkbox" name='{{ form.family_friendly }}' id="family_friendly checked>
+                    <input type="checkbox" name='{{ form.family_friendly }}' id="family_friendly checked">
                   </div>
                     <!--link back to the trips-->
                     <div class="submit-button text-right mt-5 mb-2">
