--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -3,8 +3,10 @@
 
 {% block extra_css %}
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
+  <link rel="stylesheet" href="{% static 'trips/css/star-rating.css' %}">
 {% endblock %}
+
+
 
 {% block extra_js %}
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -22,8 +24,8 @@
                 <h1 class="text-center heading">{{ trip.name }}</h1>
             </div>
         </div>
-    </div>
-    <div class="row">
+       
+        <div class="row">
         <div class="col">
             <button type="button" name="{{ trip.add_to_favourite }}" class="btn btn-lg btn-favourite add-to-favourites" data-bs-toggle="tooltip" data-bs-placement="top" title="Add to favourites">
                 <i class="fas fa-heart"></i>
@@ -31,8 +33,8 @@
            <!-- <a href="{% url 'view_availability' trip.id %}" class="btn btn-lg btn-next btn-book">Book Now</a> -->
             <img src="{{ trip.images.url }}" class="card-img-top" alt="{{ trip.name }}">
         </div>
-    </div>
-    <div class="row spacing">
+        </div>
+        <div class="row mt-2">
         <div class="col-lg-6 col-md-6 col-sm-12">
             <ul class="list-group">
                 <li class="list-group-item"><i class="fas fa-hourglass-end fa-lg"></i><strong> Duration: </strong> {{ trip.duration }}hrs</li>
@@ -119,43 +121,81 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row spacing">
+        </div>
+        <div class="row mt-2">
         <div class="col">
             <h2>Full Description</h2>
             <p>{{ trip.full_description }}</p>
         </div>
-    </div>
-    <div class="row spacing">
+        </div>
+        <div class="row mt-2">
         <div class="col">
             <h3>What is Included</h3>
             <p>{{ trip.included }}</p>
         </div>
-    </div>
-    <div class="row spacing">
+        </div>
+        <div class="row mt-2">
         <div class="col">
             <h3>What to Bring</h3>
             <p>{{ trip.what_to_bring }}</p>
         </div>
-    </div>
-    <div class="row spacing">
+        </div>
+        <div class="row mt-2">
         <div class="col">
             <h4>Cancellation Policy</h4>
             <p>You may cancel your trip 24hrs in advance to get a full refund. 
                 Any trips cancelled less than 24hrs in advance will not qualify for a refund.
             </p>
         </div>
-    </div>
-    <!--Load Reviews Here and Star Rating-->
-    <!--Display Reveis only 3 on the page sorted by review date-->
-    <div class="row spacing">
-        <div class="col">
-            <h4>Reviews</h4>   
         </div>
-    </div>
-    <div class="row">
+        <!--Load Reviews Here and Star Rating-->
+        <!--Display Reveis only 3 on the page sorted by review date-->
+        <div class="row spacing">
+        <!--User Reviews-->
+        <form action="" method="POST" class="col-lg-8 offset-lg-2 col-md-8 col-sm-12 border">
+            {% csrf_token %}
+            <h4 class="text-center m-2">Review this Trip</h4>
+            <p>How would you rate this trip?</p>
+            <div class="rating">
+                <!--Star Rating-->
+                <label for="rating10" title="5"></label>
+                <input type="radio" name="rating" id="rating10" value="5" class="d-none" required />
+                <label for="rating9" title="4.5" class="half"></label>
+                <input type="radio" name="rating" id="rating9" value="4.5" class="d-none" required />
+                <label for="rating8" title="4"></label>
+                <input type="radio" name="rating" id="rating8" value="4" class="d-none" required />
+                <label for="rating7" title="3.5" class="half"></label>
+                <input type="radio" name="rating" id="rating7" value="3.5" class="d-none" required />
+                <label for="rating6" title="3"></label>
+                <input type="radio" name="rating" id="rating6" value="3" class="d-none" required />
+                <label for="rating5" title="2.5" class="half"></label>
+                <input type="radio" name="rating" id="rating5" value="2.5" class="d-none" required />
+                <label for="rating4" title="2"></label>
+                <input type="radio" name="rating" id="rating4" value="2" class="d-none" required />
+                <label for="rating3" title="1.5" class="half"></label>
+                <input type="radio" name="rating" id="rating3" value="1.5" class="d-none" required />
+                <label for="rating2" title="1"></label>
+                <input type="radio" name="rating" id="rating2" value="1" class="d-none" required />
+                <label for="rating1" title="0.5" class="half"></label>
+                <input type="radio" name="rating" id="rating1" value="0.5" class="d-none" required />
+            </div>
+            <div class="col">
+                <label for="subject" class="form-label">Review Title:</label>
+                <input type="text" name="subject" id="subject" class="form-control">
+            </div>
+            <div class="col">
+                <label for="review" class="form-label">Review:</label>
+                <textarea name="review" id="review" rows="10" class="form-control"></textarea>
+            </div>
+            <div class="col float-end">
+                <button type="submit" class="btn btn-next">Submit Review</button>
+            </div>
+        </form>
+        </div>
+        <div class="row">
         <div class="col justify-content-center btn-div">
                 <a href="{% url 'trips' %}" class="btn btn-lg btn-next">Go Back to All Trips</a>
+        </div>
         </div>
     </div>
 </section>
